# outplant

./: .gitignore  CODEOWNERS  Cargo.toml  LICENCE  README.md  build.rs  eslint.config.js  events-proposition-1-sketch.json  events.json  events_old.json  index.html  mermaid_graph_generator.mjs  notes.txt  package-lock copy.json  package-lock.json  package.json  playwright.config.ts  style.css  tsconfig.json  update_translator_tag.mjs  vite.config.ts  vitest.config.ts
.devcontainer/: devcontainer.json
chains/: botanists.fr_FR.tsv  botanists.json  data-cleaner-4000.json  data_cleaner_4000.json  earthquake.fr_FR.tsv  earthquake.json  fleeing_bees.fr_FR.tsv  fleeing_bees.json  high_specimens.fr_FR.tsv  high_specimens.json  improved_drones_stealth.fr_FR.tsv  improved_drones_stealth.json  luminescent_gene.fr_FR.tsv  luminescent_gene.json  missing_form.fr_FR.tsv  missing_form.json  plans.fr_FR.tsv  plans.json  product_recall_light_sensors.json  product_recall_screws.json  request_additional_funding.json  rich_hunters.fr_FR.tsv  rich_hunters.json  schema.json  science_prize.fr_FR.tsv  science_prize.json  starvation.fr_FR.tsv  starvation.json  toxic_rain.fr_FR.tsv  toxic_rain.json  wrong_planet.fr_FR.tsv  wrong_planet.json
e2e/: basic-actions.e2e.spec.ts
event_chains/: missing_form.json  schema.json  starvation.json  toxic_rain.json
poc/: events-proposition-1-sketch.json  events-proposition-2-sketch.yml
src/: App.svelte  app.css  dtos.rs  effect.rs  embed.rs  engine.rs  event.rs  event_chain.rs  event_store.rs  lib.rs  macros.rs  main.rs  main.ts  state.rs  test-engine.rs  (+2 more)
(+56 files in other folders)
