[package]
name = "unnamed_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
wasm-logging = []
integration-test = []

[dependencies]
#wasm
yew = { version = "0.20.0", features = ["csr"] }
thiserror = "1.0"

#common
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
gloo-console = "0.2.3"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.83"

rust-embed = { version = "6.7.0", features = ["debug-embed", "include-exclude"] }
simple-error = "0.2"
